src/test/deca/syntax/valid/parser/oracle/while.deca
// Description:
//    test while loop
//
// Results:
//    test_synt --> a tree without no error
//
// History:
//    created on 07/01/2022

{
    while( a== b ){

    }
}