src/test/deca/syntax/invalid/test_dir/added/parser/brackets_outside.deca
// Description:
//    test of different print typos
//
// Results:
//    test_pars --> error line 12
//
// History:
//    created on 04/01/2022

{
}
print();